hphp/test/slow/enum_class/enum_class16.php.expectf
Fatal error: Type constant does not resolve to a class in %s/enum_class16.php on line 14
